mod_conversejs: Refresh client shortlist in fallback text

--- a/mod_conversejs/templates/template.html
+++ b/mod_conversejs/templates/template.html
@@ -19,13 +19,14 @@
 <dl>
 <dt>Desktop</dt>
 <dd><ul>
+<li><a href="https://dino.im/">Dino</a></li>
 <li><a href="https://gajim.org/">Gajim</a></li>
 <li><a href="https://poez.io/">Poezio</a></li>
-<li><a href="https://swift.im/">Swift</a></li>
 </ul></dd>
 <dt>Mobile</dt>
 <dd><ul>
 <li><a href="https://github.com/siacs/Conversations">Conversations</a></li>
+<li><a href="https://siskin.im/">Siskin</a></li>
 <li><a href="https://yaxim.org/">Yaxim</a></li>
 </ul></dd>
 </dl>
