mod_jsxc: Try not to put username and password into the ?query ...

--- a/mod_jsxc/templates/template.html
+++ b/mod_jsxc/templates/template.html
@@ -12,7 +12,7 @@
 {item!}}
 </head>
 <body>
-	<form id="jsxc_login_form">
+	<form id="jsxc_login_form" action="javascript:">
 		<dl>
 			<dt><label for="jsxc_username">Username</label></dt>
 			<dd><input id="jsxc_username" name="username" placeholder="Alice"/></dd>
